# oars

./: CONTRIBUTING.md  README.md
docs/: generate.html  index.html
docs/_layouts/: default.html
docs/scripts/: generate.js
specification/: meson.build  oars-1.0.rnc  oars-1.1.md  oars-1.1.rnc  oars-1.2.md  oars-1.2.rnc
